...
            <point key="canvasLocation" x="637.68115942028987" y="-465.40178571428567"/>
        </scene>
        <!--Sobre-->
        <scene sceneID="DOZ-gj-pci">
            <objects>
                <navigationController id="Ur5-Qs-iBI" customClass="MainNavigationController" customModule="Lodjinha" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Sobre" image="tagDeselected" selectedImage="tagSelected" id="8D6-4U-Bt7"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" shadowImage="fillVertical" id="q4C-K5-HDt">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.39059019090000002" green="0.2516102791" blue="0.54904735090000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <textAttributes key="titleTextAttributes">
                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    <constraint firstAttribute="width" constant="143" id="8Ll-b5-iAk"/>
                                </constraints>
                            </imageView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tcc-Yg-tWS" userLabel="Container">
                                <rect key="frame" x="0.0" y="645" width="414" height="80"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Roger dos Santos Oliveira" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUg-jg-nUZ">
                                        <rect key="frame" x="15" y="17" width="384" height="21"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="21" id="bzl-Tn-nGN"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                        <color key="textColor" red="0.3411764705882353" green="0.3411764705882353" blue="0.3411764705882353" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                            <constraint firstAttribute="height" constant="1" id="8Eu-jZ-GFS"/>
                                        </constraints>
                                    </view>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3eq-7J-2TX">
                                        <rect key="frame" x="15" y="11" width="384" height="44"/>
                                        <color key="backgroundColor" red="0.3921568627" green="0.25098039220000001" blue="0.54901960780000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <accessibility key="accessibilityConfiguration" identifier="reserveButton" label="reserveButton">
                                            <accessibilityTraits key="traits" button="YES" selected="YES" staticText="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                        <state key="normal" title="Reservar">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
