...
        
        self.categories = viewModel.categoryList
        self.setupCollectionView()
    }
    
    private func setupCollectionView() {
        self.collectionView.register(UINib(nibName: "CategoryCell", bundle: nil), forCellWithReuseIdentifier: "CategoryCell")
        self.collectionView.delegate = self
        self.collectionView.dataSource = self
        
        let cellSize = CGSize(width: 90, height: 104)
        let layout = UICollectionViewFlowLayout()
        layout.scrollDirection = .horizontal
...
