...
        backItem.title = "Voltar"
        navigationItem.backBarButtonItem = backItem
    }
    
    private func setupTableView() {
        self.tableView.rowHeight = UITableView.automaticDimension
        self.tableView.register(UINib(nibName: "ProductCell", bundle: nil), forCellReuseIdentifier: "ProductCell")
        self.tableView.dataSource = self
        self.tableView.delegate = self
    }
    
    private func refresh() {
        guard let categoryID = self.categoryID else { return }
...
